--- a/Gold/GraphCarousel.xhtml
+++ b/Gold/GraphCarousel.xhtml
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta content="Graph carousel composed of a line graph, a LabelSelector, and dataswap mortar" name="description"/>
     
-   <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet" type="text/css"/>
+   <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <div id="b1414d633f78446ddaa597a2fd737e70d"></div>
