--- a/bin/quizz-template.html
+++ b/bin/quizz-template.html
@@ -6,7 +6,7 @@
 
 <title>Quiz: Title</title>
 <link
-	href="http://web-13283445.us-west-1.elb.amazonaws.com/content/amc/1.0/css/widgets.css"
+	href="http://web-13283445.us-west-1.elb.amazonaws.com/content/amc/1.0/css/brix.css"
 	rel="stylesheet" />
 <!--
      <link rel="stylesheet"
