brix.css update and utils

--- a/Neff/Other/68830_EU_08_03a.html
+++ b/Neff/Other/68830_EU_08_03a.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Label Selector Image Carousel Brix" name="description">
     
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="b36f44bf63e2e4f808c91cdc6bebc6be0"></div>
