--- a/Neff/Other/68830_NE_06_01.html
+++ b/Neff/Other/68830_NE_06_01.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Multiple Choice Question Brix" name="description">
    
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="bc9021b5ced0e4bd885033c83d593a570"></div>
