--- a/Neff/Other/68830_RE_06_03.html
+++ b/Neff/Other/68830_RE_06_03.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Stepped Diagram" name="description">
    
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="b6feedd3398554a4b9835119457d787f6"></div>
