--- a/Neff/Other/68830_EU_08_02a.html
+++ b/Neff/Other/68830_EU_08_02a.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Label Selector Image Carousel Brix" name="description">
     
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="bc25b6e58b7244950ad4e4419b2e0bace"></div>
