--- a/Neff/Other/68830_RE_01_01.html
+++ b/Neff/Other/68830_RE_01_01.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Stepped Diagram" name="description">
    
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="bdb25361c090a46c382a06ab5248940a3"></div>
