--- a/Neff/Other/68830_RE_01_03b.html
+++ b/Neff/Other/68830_RE_01_03b.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Stepped Diagram" name="description">
    
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="b07983a77a6264c39a4d792477ba4b477"></div>
