--- a/Neff/Other/68830_RE_07_03.html
+++ b/Neff/Other/68830_RE_07_03.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Label Selector Image Carousel Brix" name="description">
     
-    <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet">
+    <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="b2c9d0a8c2de14d7493bc6bffeb5e6ea7"></div>
