Manza updates - brix.css and utils - putting in new graphs - still waiting on legend data swaps - fixing some descriptions

--- a/Manza/Other/IN11.5.5b.html
+++ b/Manza/Other/IN11.5.5b.html
@@ -5,8 +5,8 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Template for Multiple Choice Question Brix" name="description">
 
-        <!-- widgets.css contains styling for the interactive brix -->
-        <link href="css/widgets.css" rel="stylesheet">
+        <!-- brix.css contains styling for the interactive brix -->
+        <link href="css/brix.css" rel="stylesheet">
     </head>
     <body>
         <div id="ba6cf53cd055847cba93ad6af4fde0c14"></div>
@@ -142,7 +142,7 @@
             a.answerMan = new pearson.brix.utils.LocalAnswerMan();
             a.submitManager = new pearson.brix.utils.SubmitManager(a.eventManager, a.answerMan);
 
-            a.bricLayer = new pearson.brix.BricLayer(null, a.eventManager, a.submitManager);
+            a.bricLayer = new pearson.brix.utils.BricLayer(null, a.eventManager, a.submitManager);
 
             a.building = a.bricLayer.build(a.config);
 
