--- a/Manza/Other/IN_11.5.2.xhtml
+++ b/Manza/Other/IN_11.5.2.xhtml
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta content="Template for Thumbnail Image Carousel Brix" name="description"/>
     
-   <!-- widgets.css contains styling for the interactive brix -->
-    <link href="css/widgets.css" rel="stylesheet" type="text/css"/>
+   <!-- brix.css contains styling for the interactive brix -->
+    <link href="css/brix.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
@@ -280,7 +280,7 @@
     a.answerMan = new pearson.brix.utils.LocalAnswerMan();
     a.submitManager = new pearson.brix.utils.SubmitManager(a.eventManager, a.answerMan);
 
-    a.bricLayer = new pearson.brix.BricLayer(null, a.eventManager, a.submitManager);
+    a.bricLayer = new pearson.brix.utils.BricLayer(null, a.eventManager, a.submitManager);
 
     a.building = a.bricLayer.build(a.config);
 
