--- a/Manza/Other/IN_11.3.3a.html
+++ b/Manza/Other/IN_11.3.3a.html
@@ -65,48 +65,43 @@
                 "config":
                 {
                   "id": "graph1",
-                  "type": "lines",
-                  "xAxisFormat":
+                  "useHiddenTracesToDetermineExtents": false,
+                  "showLegend": true,
+                  "legendVerticalPosition": "top",
+                  "legendHorizontalPosition": "right",
+                  "xAxis":
                   {
-                    "format": "0f",
+                    "location": "bottom",
                     "label": "Year",
-                    "orientation": "bottom",
-                    "ticks": [ 1940, 1955, 1970, 1985, 2000, 2015 ],
-                    "type": "linear"
+                    "tickmarkSettings":
+                    {
+                      "ticks": [ 1940, 1955, 1970, 1985, 2000, 2015 ],
+                      "nice": false,
+                      "format": "0f"
+                    }
                   },
-                  "yAxisFormat":
+                  "yAxis":
                   {
-                    "label": "Percentage (%)",
-                    "orientation": "left",
-                    "ticks": [ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100 ],
-                    "type": "linear"
+                    "location": "left",
+                  "label": "Percentage (%)",
+                    "tickmarkSettings":
+                    {
+                      "ticks": [ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100 ],
+                      "nice": false
+                    }
                   }
                 },
                 "configFixup":
                 [
                   {
-                    "name": "Data",
                     "type": "set-property",
+                    "name": "tracePoints",
                     "value": { "type": "ref", "domain": "data", "refId": "intermarriage" }
-                  }
-                ]
-              },
-              {
-                "bricId": "legend1",
-                "bricType": "ProtoLegend",
-                "config":
-                {
-                  "id": "legendSchools",
-                  "type": "line",
-                  "xPos": "right",
-                  "yPos": "top"
-                },
-                "configFixup":
-                [
+                  },
                   {
-                    "name": "labels",
                     "type": "set-property",
-                    "value": { "type": "ref", "domain": "data", "refId": "intermarriageLegend" }
+                    "name": "traceAttributes",
+                    "value": { "type": "ref", "domain": "data", "refId": "intermarriageAttributes" }
                   }
                 ]
               },
@@ -142,8 +137,9 @@
                 "mortarType": "Dataswap",
                 "config":
                 {
+                  "eventDetailsProperty": "index",
                   "dataPropertySetter": "setData",
-                  "eventDetailsProperty": "index"
+                  "sourceDataArrayArgCount": 2
                 },
                 "configFixup":
                 [
@@ -166,9 +162,24 @@
                       "type": "array",
                       "elements":
                       [
-                        { "type": "ref", "domain": "data", "refId": "intermarriage" },
-                        { "type": "ref", "domain": "data", "refId": "schools" },
-                        { "type": "ref", "domain": "data", "refId": "neighborhoods" }
+                        {
+                          "type": "array",
+                          "elements":
+                          [
+                            { "type": "ref", "domain": "data", "refId": "intermarriage" },
+                            { "type": "ref", "domain": "data", "refId": "schools" },
+                            { "type": "ref", "domain": "data", "refId": "neighborhoods" }
+                          ]
+                        },
+                        {
+                          "type": "array",
+                          "elements":
+                          [
+                            { "type": "ref", "domain": "data", "refId": "intermarriageAttributes" },
+                            { "type": "ref", "domain": "data", "refId": "schoolsAttributes" },
+                            { "type": "ref", "domain": "data", "refId": "neighborhoodsAttributes" }
+                          ]
+                        }
                       ]
                     }
                   },
@@ -176,102 +187,6 @@
                     "type": "set-property",
                     "name": "targetBric",
                     "value": { "type": "ref", "domain": "brix", "refId": "swapGraph" }
-                  }
-                ]
-              },
-              {
-                "mortarId": "dataswap2",
-                "mortarType": "Dataswap",
-                "config":
-                {
-                  "dataPropertySetter": "setLabels",
-                  "eventDetailsProperty": "index"
-                },
-                "configFixup":
-                [
-                  {
-                    "name": "topic",
-                    "type": "set-property",
-                    "value":
-                    {
-                      "bricType": "LabelSelector",
-                      "eventName": "selected",
-                      "instanceId": "dataLabels",
-                      "type": "brix-topic"
-                    }
-                  },
-                  {
-                    "name": "sourceDataArray",
-                    "type": "set-property",
-                    "value":
-                    {
-                      "type": "array",
-                      "elements":
-                      [
-                        { "type": "ref", "domain": "data", "refId": "intermarriageLegend" },
-                        { "type": "ref", "domain": "data", "refId": "schoolsLegend" },
-                        { "type": "ref", "domain": "data", "refId": "neighborhoodsLegend" }
-                      ]
-                    }
-                  },
-                  {
-                    "type": "set-property",
-                    "name": "targetBric",
-                    "value": { "type": "ref", "domain": "brix", "refId": "legend1" }
-                  }
-                ]
-              },
-              {
-                "mortarId": "hilite3",
-                "mortarType": "Hilite",
-                "config":
-                {
-                  "eventDetailsProperty": "selectKey"
-                },
-                "configFixup":
-                [
-                  {
-                    "type": "set-property",
-                    "name": "topic",
-                    "value":
-                    {
-                      "type": "brix-topic",
-                      "bricType": "ProtoLegend",
-                      "eventName": "selected",
-                      "instanceId": "legendSchools"
-                    }
-                  },
-                  {
-                    "type": "set-property",
-                    "name": "targetBric",
-                    "value": { "type": "ref", "domain": "brix", "refId": "swapGraph" }
-                  }
-                ]
-              },
-              {
-                "mortarId": "hilite2",
-                "mortarType": "Hilite",
-                "config":
-                {
-                  "eventDetailsProperty": "selectKey"
-                },
-                "configFixup":
-                [
-                  {
-                    "type": "set-property",
-                    "name": "topic",
-                    "value":
-                    {
-                      "type": "brix-topic",
-                      "bricType": "ProtoLineGraph",
-                      "eventName": "selected",
-                      "instanceId": "graph1"
-                    }
-                  },
-                  {
-                    "type": "set-property",
-                    "name": "targetBric",
-                    "value": { "type": "ref", "domain": "brix", "refId": "legend1" }
                   }
                 ]
               }
@@ -300,16 +215,6 @@
                 ],
               },
               {
-                "description": "Append the legend to the svg container",
-                "type": "method-call",
-                "instance": { "type": "ref", "domain": "brix", "refId": "swapGraph" },
-                "methodName": "append",
-                "args":
-                [
-                  { "type": "ref", "domain": "brix", "refId": "legend1" }
-                ],
-              },
-              {
                 "description": "Append the labels to the svg container",
                 "type": "method-call",
                 "instance": { "type": "ref", "domain": "brix", "refId": "cntr1" },
@@ -328,26 +233,6 @@
                 "type": "method-call",
                 "instance": { "type": "ref", "domain": "brix", "refId": "labelSelector1" },
                 "methodName": "lite",
-                "args":
-                [
-                  { "type": "constant", "value": "0" }
-                ]
-              },
-              {
-                "description": "Initial condition: select 1st legend",
-                "type": "method-call",
-                "instance": { "type": "ref", "domain": "brix", "refId": "legend1" },
-                "methodName": "lite",
-                "args":
-                [
-                  { "type": "constant", "value": "0" }
-                ]
-              },
-              {
-                "description": "Initial condition: select 1st graph trace",
-                "instance": { "type": "ref", "domain": "brix", "refId": "swapGraph" },
-                "methodName": "lite",
-                "type": "method-call",
                 "args":
                 [
                   { "type": "constant", "value": "0" }
@@ -447,10 +332,10 @@
               { "x": 2011, "y": 16 }
             ]
           ],
-          "intermarriageLegend":
+          "intermarriageAttributes":
           [
-            { "content": "Approve" },
-            { "content": "Disapprove" }
+            { "traceIndex": 0, "legendContent": "Approve" },
+            { "traceIndex": 1, "legendContent": "Disapprove" }
           ],
           "neighborhoods":
           [
@@ -467,10 +352,10 @@
               { "x": 1996, "y": 13 }
             ]
           ],
-          "neighborhoodsLegend":
+          "neighborhoodsAttributes":
           [
-            { "content": "Disagree" },
-            { "content": "Agree" }
+            { "traceIndex": 0, "legendContent": "Disagree" },
+            { "traceIndex": 1, "legendContent": "Agree" }
           ],
           "schools":
           [
@@ -487,10 +372,10 @@
               { "x": 1995, "y": 4 }
             ]
           ],
-          "schoolsLegend":
+          "schoolsAttributes":
           [
-            { "content": "Same" },
-            { "content": "Separate" }
+            { "traceIndex": 0, "legendContent": "Same" },
+            { "traceIndex": 1, "legendContent": "Separate" }
           ]
         }
       };
