--- a/Manza/Other/IN_11.3.3b.html
+++ b/Manza/Other/IN_11.3.3b.html
@@ -28,7 +28,7 @@
       {
         "brixConfig": [
           {
-            "bricId": "swapGraph", 
+            "bricId": "swapGraphII", 
             "bricType": "LineGraph", 
             "config": {
               "id": "graph2", 
@@ -57,7 +57,8 @@
                 "position": "left", 
                 "tickmarkSettings":
                 {
-                "ticks": [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]
+                "ticks": [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100],
+                "nice": false
                 }
               }
             }, 
@@ -79,38 +80,17 @@
                 "value": 
                 {
                 "domain": "data", 
-                "refId": "effortLegend", 
+                "refId": "effortAttributes", 
                 "type": "ref"
                 }
               }
             ]
-          }, 
-          /*{
-            "bricId": "legend1", 
-            "bricType": "Legend", 
-            "config": {
-              "id": "legendSchools2", 
-              "type": "line", 
-              "xPos": "right", 
-              "yPos": "top"
-            }, 
-            "configFixup": [
-              {
-                "name": "labels", 
-                "type": "set-property", 
-                "value": {
-                  "domain": "data", 
-                  "refId": "effortLegend", 
-                  "type": "ref"
-                }
-              }
-            ]
-          }, */
+          },
           {
             "bricId": "labelSelector1", 
             "bricType": "LabelSelector", 
             "config": {
-              "id": "dataLabels2", 
+              "id": "dataLabelsII2", 
               "itemMargin": {
                 "bottom": 5, 
                 "left": 0, 
@@ -122,7 +102,7 @@
                 "Effort", 
                 "Favors"
               ], 
-              "layout": "vertical"
+              "layout": "horizontal"
             }
           }, 
           {
@@ -136,7 +116,7 @@
             }
           }
         ], 
-        "containerId": "b1414d633f78446ddaa597a2fd737e70d", 
+        "containerId": "graph2Container", 
         "description": "container for the graph and labels", 
         "hookupActions": [
           {
@@ -159,7 +139,7 @@
             "args": [
               {
                 "domain": "brix", 
-                "refId": "swapGraph", 
+                "refId": "swapGraphII", 
                 "type": "ref"
               }, 
               {
@@ -226,145 +206,67 @@
         ], 
         "mortarConfig": [
           {
+            "mortarId": "dataswap10", 
+            "mortarType": "Dataswap",
             "config": {
               "dataPropertySetter": "setData", 
-              "eventDetailsProperty": "index"
+              "eventDetailsProperty": "index",
+              "sourceDataArrayArgCount": 2
             }, 
             "configFixup": [
               {
                 "name": "topic", 
                 "type": "set-property", 
-                "value": {
-                  "bricType": "LabelSelector", 
-                  "eventName": "selected", 
-                  "instanceId": "dataLabels", 
-                  "type": "brix-topic"
-                }
-              }, 
-              {
-                "name": "sourceDataArray", 
-                "type": "set-property", 
-                "value": {
-                  "elements": [
-                    {
-                      "domain": "data", 
-                      "refId": "effort", 
-                      "type": "ref"
-                    }, 
-                    {
-                      "domain": "data", 
-                      "refId": "motivation", 
-                      "type": "ref"
-                    }, 
-                    {
-                      "domain": "data", 
-                      "refId": "favors", 
-                      "type": "ref"
-                    }
-                  ], 
-                  "type": "array"
-                }
-              }, 
-              {
-                "name": "targetBric", 
-                "type": "set-property", 
-                "value": {
-                  "domain": "brix", 
-                  "refId": "swapGraph", 
-                  "type": "ref"
-                }
-              }
-            ], 
-            "mortarId": "dataswap10", 
-            "mortarType": "Dataswap"
-          }, 
-          /*{
-            "config": {
-              "dataPropertySetter": "setLabels", 
-              "eventDetailsProperty": "index"
-                }, 
-                "configFixup": [
-              {
-                "name": "topic", 
-                "type": "set-property", 
-                "value": {
-                  "bricType": "LabelSelector", 
-                  "eventName": "selected", 
-                  "instanceId": "dataLabels", 
-                  "type": "brix-topic"
-                    }
-               }, 
-               {
-                "name": "sourceDataArray", 
-                "type": "set-property", 
-                "value": {
-                  "elements": [
-                    {
-                      "domain": "data", 
-                      "refId": "effortLegend", 
-                      "type": "ref"
-                    }, 
-                    {
-                      "domain": "data", 
-                      "refId": "motivationLegend", 
-                      "type": "ref"
-                    }, 
-                    {
-                      "domain": "data", 
-                      "refId": "favorsLegend", 
-                      "type": "ref"
-                    }
-                    ], 
-                  "type": "array"
-                  }
-                }, 
+                "value": 
                 {
-                    "name": "targetBric", 
-                    "type": "set-property", 
-                    "value": {
-                      "domain": "brix", 
-                      "refId": "legend1", 
-                      "type": "ref"
-                        }
-                }
-                ], 
-            "mortarId": "dataswap2", 
-            "mortarType": "Dataswap"
-          }, */
-          /*{
-            "config": {
-              "eventDetailsProperty": "selectKey"
-            }, 
-            "configFixup": [
-              {
-                "name": "topic", 
-                "type": "set-property", 
-                "value": {
-                  "bricType": "Legend", 
+                  "bricType": "LabelSelector", 
                   "eventName": "selected", 
-                  "instanceId": "legendSchools", 
+                  "instanceId": "dataLabelsII", 
                   "type": "brix-topic"
+                }
+              }, 
+              {
+                "name": "sourceDataArray", 
+                "type": "set-property", 
+                "value": 
+                {
+                  "type": "array",
+                  "elements": 
+                  [
+                  { 
+                    "type": "array",
+                    "elements": 
+                    [
+                      { "domain": "data", "refId": "effort", "type": "ref" }, 
+                      { "domain": "data", "refId": "motivation", "type": "ref" }, 
+                      { "domain": "data", "refId": "favors", "type": "ref" }
+                    ]
+                  },
+                  {
+                   "type": "array",
+                   "elements":
+                    [
+                      { "type": "ref", "domain": "data", "refId": "effortAttributes" },
+                      { "type": "ref", "domain": "data", "refId": "motivationAttributes" },
+                      { "type": "ref", "domain": "data", "refId": "favorsAttributes" }
+                    ]
+                  }
+                  ]
                 }
               }, 
               {
                 "name": "targetBric", 
                 "type": "set-property", 
-                "value": {
-                  "domain": "brix", 
-                  "refId": "swapGraph", 
-                  "type": "ref"
-                }
+                "value": { "domain": "brix", "refId": "swapGraphII", "type": "ref" }
               }
-            ], 
-            "mortarId": "hilite3", 
-            "mortarType": "Hilite"
-          }, */
+            ]
+          }
         ]
       }, 
       {
         "brixConfig": [
           {
-            "bricId": "lbltbl1", 
+            "bricId": "lbltbl2", 
             "bricType": "Callouts", 
             "config": {
               "id": "callme2", 
@@ -388,7 +290,7 @@
             }
           }
         ], 
-        "containerId": "b1414d633f78446ddaa597a2fd737e70d", 
+        "containerId": "myCalloutContainer2", 
         "description": "The 'b1414d633f78446ddaa597a2fd737e70d' container contains the swappable callouts", 
         "hookupActions": [
           {
@@ -401,7 +303,7 @@
             "description": "draw the label table", 
             "instance": {
               "domain": "brix", 
-              "refId": "lbltbl1", 
+              "refId": "lbltbl2", 
               "type": "ref"
             }, 
             "methodName": "draw", 
@@ -414,10 +316,10 @@
                 "value": "0"
               }
             ], 
-            "description": "Initial condition: select 1st table row (note that we may want to use the state field to do this later)", 
+            "description": "Initial condition: select 1st table row", 
             "instance": {
               "domain": "brix", 
-              "refId": "lbltbl1", 
+              "refId": "lbltbl2", 
               "type": "ref"
             }, 
             "methodName": "lite", 
@@ -436,7 +338,7 @@
                 "value": {
                   "bricType": "LabelSelector", 
                   "eventName": "selected", 
-                  "instanceId": "dataLabels", 
+                  "instanceId": "dataLabelsII", 
                   "type": "brix-topic"
                 }
               }, 
@@ -445,7 +347,7 @@
                 "type": "set-property", 
                 "value": {
                   "domain": "brix", 
-                  "refId": "lbltbl1", 
+                  "refId": "lbltbl2", 
                   "type": "ref"
                 }
               }
@@ -458,46 +360,46 @@
     ],
 			"data":
                 {
-                    "effortLegend":
+                    "effortAttributes":
                         [
                             { "traceIndex": 0, "legendContent": "No"},
                             { "traceIndex": 1, "legendContent": "Yes"}
                         ], 
-					"effort": 
+					           "effort": 
                         [
-    					    [
+    					            [
                     			{"x": 1977, "y": 34},
                     			{"x": 1988, "y": 38 },
                     			{"x": 1998, "y": 53 },
                     			{"x": 2010, "y": 50 }
-        					],
-                            [
-                                {"x": 1977, "y": 66},
-                                {"x": 1988, "y": 62 },
-                                {"x": 1998, "y": 47 },
-                                {"x": 2010, "y": 50 }
-                            ]
+        					         ],
+                          [
+                          {"x": 1977, "y": 66},
+                          {"x": 1988, "y": 62 },
+                          {"x": 1998, "y": 47 },
+                          {"x": 2010, "y": 50 }
+                          ]
                         ],
-                    "motivationLegend":
+                      "motivationAttributes":
                         [
                             { "traceIndex": 0, "legendContent": "Disagree"},
                             { "traceIndex": 1, "legendContent": "Agree"},
                             { "traceIndex": 2, "legendContent": "Neutral"}
                         ], 
-					"motivation":
+					             "motivation":
                         [
-    						[
+    						            [
                                 {"x": 1986, "y": 29 },
                                 {"x": 1994, "y": 22 },
                                 {"x": 2004, "y": 24 },
                                 {"x": 2008, "y": 22 }
                             ],
                             [
-    							{"x": 1986, "y": 58 },
+    							        {"x": 1986, "y": 58 },
                     			{"x": 1994, "y": 65 },
                     			{"x": 2004, "y": 58 },
                     			{"x": 2008, "y": 60 }
-    						],
+    						            ],
                             [
                                 {"x": 1986, "y": 13 },
                                 {"x": 1994, "y": 13 },
@@ -505,7 +407,7 @@
                                 {"x": 2008, "y": 18 }
                             ]
                         ],
-                     "favorsLegend":
+                     "favorsAttributes":
                         [
                             { "traceIndex": 0, "legendContent": "Disagree"},
                             { "traceIndex": 1, "legendContent": "Agree"},
