--- a/Manza/Other/IN_11.3.3a.html
+++ b/Manza/Other/IN_11.3.3a.html
@@ -118,7 +118,7 @@
                     "Schools",
                     "Neighborhoods"
                   ],
-                  "layout": "vertical"
+                  "layout": "horizontal"
                 }
               },
               {
