Updated to new graphs

--- a/Manza/Other/IN_11.3.3a.html
+++ b/Manza/Other/IN_11.3.3a.html
@@ -210,9 +210,9 @@
                 "methodName": "append",
                 "args":
                 [
-                  { "type": "ref", "domain": "brix", "refId": "swapGraph", },
+                  { "type": "ref", "domain": "brix", "refId": "swapGraph" },
                   { "type": "constant", "value": { "topPercentOffset": 0.15, "leftPercentOffset": 0, "heightPercent": 0.85, "widthPercent": 1 } }
-                ],
+                ]
               },
               {
                 "description": "Append the labels to the svg container",
@@ -226,7 +226,7 @@
                     "type": "constant",
                     "value": { "topPercentOffset": 0.0, "leftPercentOffset": 0, "heightPercent": 0.2, "widthPercent": 1 }
                   }
-                ],
+                ]
               },
               {
                 "description": "Initial condition: select 1st label",
