--- a/Manza/Other/IN_11.3.3b.html
+++ b/Manza/Other/IN_11.3.3b.html
@@ -90,7 +90,7 @@
             "bricId": "labelSelector1", 
             "bricType": "LabelSelector", 
             "config": {
-              "id": "dataLabelsII2", 
+              "id": "dataLabelsII", 
               "itemMargin": {
                 "bottom": 5, 
                 "left": 0, 
